variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:1: error: not found: type int
var biscuits = 0:int
                 ^RunHalf:2: error: not found: type int
var caseOrange = 0:int
                   ^