variables.RunHalf.scala.code
var biscuits = 0:int
var caseOrange = 0:int

while (2*biscuits != caseOrange+1) {
  avance();
  if (estSurBiscuit){
    biscuits += 1;
  if (estSurOrange) {
    caseOrange += 1
  }
  }
}